Bug 49181 - USB audio module crashes the system
Summary: USB audio module crashes the system
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-21 12:16 UTC by Artem S. Tashkinov
Modified: 2012-11-11 18:45 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.6.2
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
Hardware/kernel information (47.77 KB, application/octet-stream)
2012-10-21 12:21 UTC, Artem S. Tashkinov
Details
A device which causes a panic (24.78 KB, image/png)
2012-10-21 12:27 UTC, Artem S. Tashkinov
Details
Errors preceding a crash (383.84 KB, image/jpeg)
2012-10-21 13:41 UTC, Artem S. Tashkinov
Details
dmesg up to a crash (204.06 KB, application/octet-stream)
2012-10-21 19:42 UTC, Artem S. Tashkinov
Details

Description Artem S. Tashkinov 2012-10-21 12:16:33 UTC
My system crashes when I try to enable usb-audio on my Logitech C510 webcam using Adobe Flash.

All other applications can read from the USB audio without problems.
Comment 1 Artem S. Tashkinov 2012-10-21 12:21:06 UTC
Created attachment 84141 [details]
Hardware/kernel information
Comment 2 Artem S. Tashkinov 2012-10-21 12:27:58 UTC
Created attachment 84151 [details]
A device which causes a panic
Comment 3 Artem S. Tashkinov 2012-10-21 13:13:05 UTC
Messages before the system freezes: http://imageshack.us/a/img685/9452/panicz.jpg
Comment 4 Artem S. Tashkinov 2012-10-21 13:41:43 UTC
Created attachment 84161 [details]
Errors preceding a crash
Comment 5 Artem S. Tashkinov 2012-10-21 19:42:59 UTC
Created attachment 84221 [details]
dmesg up to a crash
Comment 6 Artem S. Tashkinov 2012-11-07 21:02:23 UTC
This patch fixes this issue: https://lkml.org/lkml/2012/11/7/406
Comment 7 Florian Mickler 2012-11-11 18:45:06 UTC
A patch referencing this bug report has been merged in Linux v3.7-rc5:

commit f58161ba1b05a968e5136824b5a16b714b6a5317
Author: Takashi Iwai <tiwai@suse.de>
Date:   Thu Nov 8 08:52:45 2012 +0100

    ALSA: usb-audio: Fix crash at re-preparing the PCM stream

Note You need to log in before you can comment on or make changes to this bug.